Closed Bug 511673 Opened 15 years ago Closed 15 years ago

hidden panels have a state of ''

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file)

This is a regression from bug 454475.
Attachment #395605 - Flags: review?(roc)
http://hg.mozilla.org/mozilla-central/rev/eba5db180e72
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Moving to Core:XUL per https://bugzilla.mozilla.org/show_bug.cgi?id=1455336
Component: XP Toolkit/Widgets: XUL → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: