Bug 511673, hidden panels have an empty state, but should be 'closed', r=roc