layout/xul/base/src/nsPopupBoxObject.cpp
@@ -232,6 +232,9 @@ nsPopupBoxObject::EnableKeyboardNavigator(PRBool aEnableKeyboardNavigator)
 NS_IMETHODIMP
 nsPopupBoxObject::GetPopupState(nsAString& aState)
 {
+  // set this here in case there's no frame for the popup
+  aState.AssignLiteral("closed");
+
   nsMenuPopupFrame *menuPopupFrame = GetMenuPopupFrame();
   if (menuPopupFrame) {
     switch (menuPopupFrame->PopupState()) {
@@ -247,7 +250,6 @@ nsPopupBoxObject::GetPopupState(nsAString& aState)
         aState.AssignLiteral("hiding");
         break;
       case ePopupClosed:
-        aState.AssignLiteral("closed");
         break;
       default:
         NS_NOTREACHED("Bad popup state");
